fixed bug with map not drawing properly on map tab fixed issue with map window having a horizontal scroll show a message on map tab alerting users it is only showing first 10,000 results disabled record a sightings button on create or sight page

--- a/web-app/css/map.css
+++ b/web-app/css/map.css
@@ -6,4 +6,7 @@
 #recordOrActivityMap {
     height: 500px;
     width: 100%;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
